--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Assignment1MobileAppDevelopment</string>
-    <string name="button">Button</string>
+    <string name="buttonOn">Show as actual size</string>
+    <string name="buttonOff">Scale the picture to screen</string>
 </resources>
